--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   },
   "dependencies": {
     "@expo/webpack-config": "^19.0.0",
+    "@lottiefiles/dotlottie-react": "^0.13.5",
     "@prisma/client": "^6.16.2",
     "@react-native-async-storage/async-storage": "1.18.2",
     "@supabase/supabase-js": "^2.74.0",
@@ -31,6 +32,7 @@
     "express": "^5.1.0",
     "helmet": "^8.1.0",
     "jsonwebtoken": "^9.0.2",
+    "lottie-react-native": "^7.3.4",
     "morgan": "^1.10.1",
     "pg": "^8.16.3",
     "react": "18.2.0",
